<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/expenseNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/transportation"/>

    <EditText
        android:id="@+id/expenseCostInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cost"
        android:inputType="numberDecimal"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/checkboxDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount"/>
        <EditText
            android:id="@+id/expenseDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingHorizontal="5dp"
            android:inputType="number"
            android:hint="@string/discount_with_percentage"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>